src/test/ui/unboxed-closures/issue-30906.stderr
error[E0308]: mismatched types
  --> $DIR/issue-30906.rs:15:5
   |
LL |     test(Compose(f, |_| {}));
   |     ^^^^ lifetime mismatch
   |
   = note: expected type `FnOnce<(&'x str,)>`
              found type `FnOnce<(&str,)>`
note: the lifetime requirement is introduced here
  --> $DIR/issue-30906.rs:3:12
   |
LL | fn test<F: for<'x> FnOnce<(&'x str,)>>(_: F) {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
